@@ -1,2 +1,4 @@
-Error: iff(condition, value_t, value_f): invalid form. at line 6
-       &iff($x > 1, "s")
+Took 10 seconds
+Took 1 second
+Last test? 1
+Last test? 
