@@ -1,0 +1,4 @@
+@a = @(1);
+$x = push(@a, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+println($x);
+println(@a);
